Fetching data from H2 database instead of static list

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ logging.level.org.springframework=info
 #spring.security.user.name=Akash
 #spring.security.user.password=sky
 spring.datasource.url=jdbc:h2:mem:testdb
+spring.jpa.defer-datasource-initialization=true
